--- a/src/main/res/values-v11/styles.xml
+++ b/src/main/res/values-v11/styles.xml
@@ -4,8 +4,15 @@
         Base application theme for API 11+. This theme completely replaces
         AppBaseTheme from res/values/styles.xml on API 11+ devices.
     -->
-    <style name="AppBaseTheme" parent="android:Theme.Holo.Light">
-        <!-- API 11 theme customizations can go here. -->
+    <style name="AppBaseTheme" parent="android:Theme.Holo.Light.DarkActionBar">
+        <!-- the theme applied to the application or activity -->
+        <item name="android:actionBarStyle">@style/MaterialContactsActionBar</item>
+    </style>
+
+    <!-- ActionBar styles -->
+    <style name="MaterialContactsActionBar"
+        parent="@android:style/Widget.Holo.Light.ActionBar.Solid.Inverse">
+        <item name="android:background">@color/primary</item>
     </style>
 
 </resources>
