Added support library & material for all versions

--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -17,56 +17,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/primary"
-        android:text="@string/no_contact_selected"
-        android:id="@+id/nameTextView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginTop="@dimen/activity_vertical_margin"/>
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:text="@string/image_description"
-        android:id="@+id/descriptionTextView"
-        android:layout_below="@+id/nameTextView"
-        android:layout_alignLeft="@+id/separator"
-        android:layout_alignStart="@+id/separator"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:id="@+id/separator"
-        android:background="#ff33b5e5"
-        android:layout_below="@+id/descriptionTextView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="4dp"
-        android:id="@+id/separator2"
-        android:layout_below="@+id/separator"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+    tools:context=".MainActivity"
+    android:background="@color/primary"
+    android:id="@+id/rootView">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/iconImageView"
         android:contentDescription="@string/image_description"
-        android:layout_below="@+id/separator2"
         android:layout_centerHorizontal="true"
         android:adjustViewBounds="true"/>
 
@@ -77,8 +36,31 @@
         android:id="@+id/progressBar"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:visibility="gone" />
+        android:visibility="gone"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceSmall"
+        android:text="@string/image_description"
+        android:textColor="@android:color/white"
+        android:id="@+id/descriptionTextView"
+        android:layout_below="@+id/iconImageView"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textColor="@android:color/white"
+        android:text="@string/no_contact_selected"
+        android:id="@+id/nameTextView"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/descriptionTextView"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
 
 </RelativeLayout>
 
