--- a/src/main/res/menu/main.xml
+++ b/src/main/res/menu/main.xml
@@ -1,22 +1,24 @@
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:micopi="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/action_assign"
         android:icon="@drawable/ic_done_white_36dp"
         android:title="@string/assign_button_label"
-        android:showAsAction="ifRoom|withText"/>
+        micopi:showAsAction="ifRoom|withText"/>
 
     <item android:id="@+id/action_search"
         android:icon="@drawable/ic_search_white_36dp"
         android:title="@string/contact_button_label"
-        android:showAsAction="ifRoom" />
+        micopi:showAsAction="ifRoom" />
 
     <item android:id="@+id/action_retry"
         android:icon="@drawable/ic_autorenew_white_36dp"
         android:title="@string/retry_button_label"
-        android:showAsAction="ifRoom"/>
+        micopi:showAsAction="ifRoom"/>
 
     <item android:id="@+id/action_save"
+        android:icon="@drawable/ic_save_white_36dp"
         android:title="@string/save_button_label"
-        android:showAsAction="never" />
+        micopi:showAsAction="never" />
 
 </menu>
