--- a/src/main/res/layout-xlarge/activity_welcome.xml
+++ b/src/main/res/layout-xlarge/activity_welcome.xml
@@ -3,36 +3,49 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.easytarget.micopi.WelcomeActivity">
+    tools:context="com.easytarget.micopi.WelcomeActivity"
+    android:background="@color/primary">
 
     <RelativeLayout
         android:id="@+id/welcomeLayout"
-        android:layout_width="match_parent"
+        android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_marginLeft="128dp"
         android:layout_marginRight="128dp">
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+            android:layout_above="@+id/firstButton"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="12dp"
+            android:src="@drawable/micopi_logo" />
 
         <Button
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
             android:text="@string/contact_button_label"
             android:id="@+id/firstButton"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:onClick="startMainActivity" />
+            android:onClick="startMainActivity"
+            android:background="@android:color/white"
+            android:textColor="@color/primary"
+            android:layout_height="78dp"
+            android:textSize="32sp"/>
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/introduction_text"
             android:id="@+id/textView"
             android:layout_below="@+id/firstButton"
+            android:layout_marginTop="12dp"
             android:layout_centerVertical="true"
             android:layout_centerHorizontal="true"
-            android:textColor="#ff33b5e5" />
+            android:textColor="@android:color/white"/>
 
     </RelativeLayout>
 
