--- a/src/main/res/layout/activity_welcome.xml
+++ b/src/main/res/layout/activity_welcome.xml
@@ -13,6 +13,15 @@
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_marginRight="@dimen/activity_horizontal_margin">
 
+        <ImageView
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:id="@+id/imageView"
+            android:layout_above="@+id/firstButton"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="12dp"
+            android:src="@drawable/micopi_logo" />
+
         <Button
             android:layout_width="match_parent"
             android:text="@string/contact_button_label"
@@ -26,7 +35,7 @@
             android:layout_height="48dp" />
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textAppearance="?android:attr/textAppearanceSmall"
             android:text="@string/introduction_text"
