--- a/src/main/res/layout-land/activity_main.xml
+++ b/src/main/res/layout-land/activity_main.xml
@@ -17,8 +17,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary"
     tools:context=".MainActivity"
+    android:background="@color/primary"
     android:id="@+id/rootView">
 
     <ImageView
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/iconImageView"
         android:contentDescription="@string/image_description"
-        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
         android:adjustViewBounds="true"/>
 
     <ProgressBar
@@ -34,6 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/progressBar"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
         android:visibility="gone"/>
@@ -45,9 +46,11 @@
         android:text="@string/image_description"
         android:textColor="@android:color/white"
         android:id="@+id/descriptionTextView"
-        android:layout_below="@+id/iconImageView"
-        android:layout_alignLeft="@id/iconImageView"
-        android:layout_alignStart="@id/iconImageView"/>
+        android:layout_toRightOf="@+id/iconImageView"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:layout_marginLeft="@dimen/activity_horizontal_margin"
+        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -57,8 +60,8 @@
         android:text="@string/no_contact_selected"
         android:id="@+id/nameTextView"
         android:layout_below="@+id/descriptionTextView"
-        android:layout_alignLeft="@id/iconImageView"
-        android:layout_alignStart="@id/iconImageView"/>
+        android:layout_alignLeft="@id/descriptionTextView"
+        android:layout_alignStart="@id/descriptionTextView"/>
 
 </RelativeLayout>
 
