--- a/src/main/res/menu/main.xml
+++ b/src/main/res/menu/main.xml
@@ -19,6 +19,6 @@
     <item android:id="@+id/action_save"
         android:icon="@drawable/ic_save_white_36dp"
         android:title="@string/save_button_label"
-        micopi:showAsAction="never" />
+        micopi:showAsAction="ifRoom" />
 
 </menu>
