--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -29,6 +29,7 @@
 
         <!-- Support library compatibility -->
         <item name="background">@color/primary</item>
+        <item name="android:statusBarColor">@color/primary_dark</item>
     </style>
 
 </resources>
