Improved contact db querying & 2k res drawing

--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -46,8 +46,11 @@
         android:textColor="@android:color/white"
         android:id="@+id/descriptionTextView"
         android:layout_below="@+id/iconImageView"
+        android:layout_alignLeft="@id/iconImageView"
+        android:layout_alignStart="@id/iconImageView"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -56,11 +59,11 @@
         android:textColor="@android:color/white"
         android:text="@string/no_contact_selected"
         android:id="@+id/nameTextView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
+        android:layout_alignLeft="@id/descriptionTextView"
+        android:layout_alignStart="@id/descriptionTextView"
         android:layout_below="@+id/descriptionTextView"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
+        android:layout_marginRight="@dimen/activity_horizontal_margin"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
 
 </RelativeLayout>
 
