--- a/src/main/res/layout-xlarge-land/activity_main.xml
+++ b/src/main/res/layout-xlarge-land/activity_main.xml
@@ -26,7 +26,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/iconImageView"
         android:contentDescription="@string/image_description"
-        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/micopi_logo"
         android:adjustViewBounds="true"/>
 
     <ProgressBar
@@ -45,12 +46,10 @@
         android:text="@string/image_description"
         android:textColor="@android:color/white"
         android:id="@+id/descriptionTextView"
-        android:layout_below="@+id/iconImageView"
-        android:layout_alignLeft="@id/iconImageView"
-        android:layout_alignStart="@id/iconImageView"
+        android:layout_toRightOf="@+id/iconImageView"
+        android:layout_alignTop="@id/iconImageView"
         android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
+        android:layout_marginRight="@dimen/activity_horizontal_margin"/>
 
     <TextView
         android:layout_width="wrap_content"
@@ -59,12 +58,12 @@
         android:textColor="@android:color/white"
         android:text="@string/no_contact_selected"
         android:id="@+id/nameTextView"
+        android:layout_below="@+id/descriptionTextView"
         android:layout_alignLeft="@id/descriptionTextView"
         android:layout_alignStart="@id/descriptionTextView"
-        android:layout_below="@+id/descriptionTextView"
+        android:layout_marginRight="@dimen/activity_large_margin"
         android:textSize="@dimen/text_xlarge"
-        android:layout_marginRight="@dimen/activity_horizontal_margin"
-        android:layout_marginEnd="@dimen/activity_horizontal_margin"/>
+        android:layout_marginEnd="@dimen/activity_large_margin"/>
 
 </RelativeLayout>
 
