--- a/src/main/res/layout-large-land/activity_main.xml
+++ b/src/main/res/layout-large-land/activity_main.xml
@@ -24,10 +24,11 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/activity_large_margin"
+        android:layout_marginStart="@dimen/activity_large_margin"
         android:id="@+id/iconImageView"
         android:contentDescription="@string/image_description"
         android:layout_centerVertical="true"
-        android:src="@drawable/micopi_logo"
         android:adjustViewBounds="true"/>
 
     <ProgressBar
