--- a/src/main/res/layout-large/activity_welcome.xml
+++ b/src/main/res/layout-large/activity_welcome.xml
@@ -25,12 +25,12 @@
 
         <Button
             android:layout_width="match_parent"
-            android:text="@string/contact_button_label"
+            android:text="@string/pick_contact"
             android:id="@+id/firstButton"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:onClick="startMainActivity"
+            android:onClick="selectButtonPressed"
             android:background="@android:color/white"
             android:textColor="@color/primary"
             android:layout_height="@dimen/activity_large_margin"
