--- a/src/main/res/menu/main.xml
+++ b/src/main/res/menu/main.xml
@@ -18,7 +18,7 @@
 
     <item android:id="@+id/action_search"
         android:icon="@drawable/ic_search_white_36dp"
-        android:title="@string/contact_button_label"
+        android:title="@string/pick_contact"
         micopi:showAsAction="ifRoom|withText" />
 
     <item android:id="@+id/action_save"
