Enabled batch assign, added shadow painting

--- a/src/main/res/layout-large/activity_welcome.xml
+++ b/src/main/res/layout-large/activity_welcome.xml
@@ -3,7 +3,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.easytarget.micopi.WelcomeActivity"
+    tools:context="com.easytarget.micopi.ui.WelcomeActivity"
     android:background="@color/primary">
 
     <RelativeLayout
