--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -29,14 +29,7 @@
         android:layout_centerHorizontal="true"
         android:adjustViewBounds="true"/>
 
-    <ProgressBar
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/progressBar"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:visibility="gone"/>
+    <include layout="@layout/progress_bar"/>
 
     <TextView
         android:layout_width="wrap_content"
