--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -1,29 +1,22 @@
 <resources>
 
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
-    <style name="AppBaseTheme" parent="@style/Theme.AppCompat.Light.DarkActionBar">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
+    <!-- Application theme. -->
+    <style name="AppTheme" parent="@style/Theme.AppCompat.Light.NoActionBar">
+
+    </style>
+
+    <style
+        name="AppThemeActionBar"
+        parent="@style/Theme.AppCompat.Light.DarkActionBar">
 
         <item name="android:actionBarStyle">@style/ContactsMaterialActionBar</item>
-
         <!-- Support library compatibility -->
         <item name="actionBarStyle">@style/ContactsMaterialActionBar</item>
     </style>
 
-    <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-    </style>
-
     <!-- ActionBar styles -->
-    <style name="ContactsMaterialActionBar"
+    <style
+        name="ContactsMaterialActionBar"
         parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">
         <item name="android:background">@color/primary</item>
 
