--- a/src/main/res/layout-land/activity_contact.xml
+++ b/src/main/res/layout-land/activity_contact.xml
@@ -13,13 +13,12 @@
 <!--See the License for the specific language governing permissions and-->
 <!--limitations under the License.-->
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/layout_contact"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:background="@color/primary"
-    android:id="@+id/rootView">
+    android:background="@color/primary">
 
     <ImageView
         android:layout_width="wrap_content"
@@ -47,6 +46,7 @@
         android:text="@string/image_description"
         android:textColor="@android:color/white"
         android:id="@+id/descriptionTextView"
+        android:layout_toEndOf="@+id/iconImageView"
         android:layout_toRightOf="@+id/iconImageView"
         android:layout_alignParentTop="true"
         android:layout_marginTop="@dimen/activity_vertical_margin"
